# 20250711ads

./: README.md
webapplication/backend/: pyproject.toml
webapplication/backend/app/: main.py
webapplication/backend/django_backend/django_backend/: settings.py  urls.py
webapplication/backend/django_backend/eval_api/: apps.py  models.py
webapplication/frontend/: package-lock.json  package.json
webapplication/frontend/src/app/: layout.js  loading.jsx  page.jsx
webapplication/frontend/src/app/admin/: layout.jsx  page.jsx
webapplication/frontend/src/app/admin/analysis/: page.jsx
webapplication/frontend/src/app/admin/browse/: page.jsx  progress.jsx
webapplication/frontend/src/app/admin/edit_db/: page.jsx
webapplication/frontend/src/app/eval/: layout.jsx  page.jsx
webapplication/frontend/src/app/eval/account/: page.jsx
webapplication/frontend/src/app/eval/all_feedbacks/: page.jsx
webapplication/frontend/src/app/login/: page.jsx
webapplication/frontend/src/app/non_eval/: layout.jsx  page.jsx
webapplication/frontend/src/config/: menuConfig.js
webapplication/frontend/src/context/: UserContext.jsx
webapplication/frontend/src/hooks/: useMenu.js
webapplication/frontend/src/lib/: api.js
webapplication/frontend/src/lib/services/: assignments.js  auth.js  employees.js  feedbacks.js  interviews.js  others.js  questions.js  surveys.js
webapplication/frontend/src/mock_data/: mockAssignments.js  mockCriteria.js  mockEvaluationDetails.js  mockFeedbacks.js  mockFeedbacksQuestions.js  mockInterviews.js  mockOthers.js  mockSurveys.js  mockUsers.js
(+51 files in other folders)
